# auto-reply-telegram-bot

./: .env.example  .gitignore  README.md  pyproject.toml
autoreply/: __init__.py  __main__.py  bot.py  config.py  repository.py
deployment/: autoreply.service
tests/: test_bot.py  test_config.py  test_repository.py
